--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/csurf": "^1.11.2",
     "@types/passport-jwt": "^3.0.6",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "csurf": "^1.11.0",
